data/derived/comb/progs/unify/prog5376.ml.out
Characters 83-85:
  if (sumList (digits n)) mod 10 not 0 then acc
                              ^^
Error: This expression has type int
       This is not a function; it cannot be applied.
